# iiif_awesome_sample_viewer

./: Cargo.toml  README.md
res/css/: index.css  index.css.map  index.scss
res/js/: Canvas.js  CustomizedCanvas.js  ManifestLoader.js  index.js
src/: iif_manifest.rs  main.rs  server.rs
src/pages/: index.rs  load_manifest.rs  mod.rs  res.rs
templates/pages/: index.html.tera
