[package]
name = "iiifviewer"
version = "0.1.0"
authors = [" <crome110mine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
serde_json = "*"
serde = "*"
serde_derive = "*"
reqwest = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "tera_templates"]